[package]
name = "wallpaper_slideshow"
version = "0.1.0"
edition = "2021"
description = "Time-aware wallpaper slideshow with EXIF-based selection"

[lib]
name = "wallpaper_slideshow"
path = "src/lib.rs"

[[bin]]
name = "wallpaper_slideshow"
path = "src/main.rs"

[[bin]]
name = "wallpaper-info"
path = "src/bin/wallpaper_info/main.rs"

[dependencies]
# shared
rexif = "0.7.5"
walkdir = "2.5.0"
rusqlite = { version = "0.32", features = ["bundled"] }

# for wallpaper_slideshow binary
chrono = "0.4.42"
libc = "0.2.178"
rand = "0.9.2"
rayon = "1.11.0"

# for wallpaper-info binary
image = "0.25.9"
base64 = "0.22.1"
flate2 = "1.1.5"
crossterm = "0.28.1"
